# consentgraph

./: .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: pages.yml
aegis/: cli.py
consentgraph/: __init__.py  cli.py  consent.py  mcp_server.py  schema.py
demo/: demo.py  demo.tape  run_demo.py
docs/: CNAME  index.html  llms.txt  research.html  schema.json
docs/.well-known/mcp/: server-card.json
examples/: aws-cost-optimizer-agent.json  aws-ecs-deployment-agent.json  azure-devops-agent.json  cmmc-l3-devops-agent.json  consent-graph.example.json  gcc-azure-gov-agent.json  gcp-devops-agent.json  k8s-ops-agent.json  multi-agent-orchestrator.json  quickstart.py  terraform-iac-agent.json
tests/: test_consent.py
